<resources>
    <string name="app_name">Civis</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_failed">Login unsuccessful. Please try again.</string>
    <string name="signup_question">Don\'t have an account?</string>
    <string name="signup">Sign Up!</string>
    <string name="skip">Skip login</string>

    <!-- Strings related to addScreen -->
    <string name="add_screen_activity_title">Add Assignment</string>
    <string name="add_form_title_hint">Title</string>
    <string name="add_form_desc_hint">Description</string>
    <string name="add_form_price_hint">Reward ( $ )</string>
    <string name="add_form_date_hint">Due Date</string>
    <string name="add_form_offer_text">I Offer</string>
    <string name="add_form_need_text">I Need</string>
    <string name="add_form_type_text">Type</string>
    <string-array name="add_form_types">
        <item>Education</item>
        <item>Computer service</item>
        <item>Translating</item>
        <item>Social</item>
        <item>Advices and Query</item>
        <item>Writing</item>
        <item>Repairing</item>
        <item>Delivery</item>
    </string-array>
    <string name="add_form_submit_button">Add Assignment</string>
    <string name="details_apply_button">Apply for Assignment</string>
    <string name="error_empty_title">Task title is required</string>
    <string name="error_empty_desc">Task Description is required</string>
    <string name="error_wrong_price">Task Reward is required</string>
    <string name="error_wrong_date">Please select a day after today.</string>
    <string name="error_select_offer_or_need">Please specify if you want to offer a Task or you need it.</string>
    <string name="error_select_service_type">Please select the type of the service.</string>
    <string name="success_add_form">Your Task has been added successfully.</string>

    <!-- Strings related to profile screen -->
    <string name="sample_user_name">John Smith</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_requested">Requests</string>
    <string name="title_offered">Offers</string>

    <!-- Strings related to details screen -->
    <string name="requst_button">You have applied for the assignment</string>
    <string name="title_activity_details">Details</string>
    <string name="write_a_message">Write a message</string>
    <string name="details_error_message">An error occurred while processing your request</string>

    <!-- Preferences keys -->
    <string name="pref_refresh_token_key">RefreshTokenKey</string>
    <string name="pref_expire_time_key">ExpireTimeKey</string>
    <string name="pref_uid_key">UserIdKey</string>
    <string name="pref_access_token_key">AccessTokenKey</string>
    <string name="pref_code_key">CodeKey</string>
    <string name="init_user_id_key">initIdKey</string>

    <!-- MyTasks screen -->
    <string name="my_requests">My Requests</string>
    <string name="my_offers">My Offers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_performed">Performed</string>
    <string name="requested_jobs">Requested Jobs</string>
    <string name="offered_jobs">Offered Jobs</string>
    <string name="location">Location</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="done">Done</string>
    <string name="pay">Pay</string>
    <string name="first_login_key">firstLoginKey</string>
    <string name="reward">Reward:</string>
    <string name="due_date">Due date:</string>

</resources>
